[package]
name = "pijul-knot"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Pijul repository hosting service (Rust knot)"

[[bin]]
name = "pijul-knot"
path = "src/main.rs"

[dependencies]
fx-pijul = { path = "../fedi-xanadu/crates/fx-pijul" }

axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
