[package]
name = "pijul-knot"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Pijul repository hosting — embed as library or run standalone"
repository = "https://github.com/DzmingLi/pijul-knot"

[lib]
name = "pijul_knot"
path = "src/lib.rs"

[[bin]]
name = "pijul-knot"
path = "src/main.rs"

[dependencies]
# Pijul core
pijul-core = { package = "pijul-at-core", version = "1.0.0-beta.11" }
pijul-repository = { package = "pijul-at-repository", version = "1.0.0-beta.11" }
pijul-config = { package = "pijul-at-config", version = "1.0.0-beta.11" }

# Concurrency
dashmap = "6"

# Web (for HTTP router)
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error / logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (binary only, but simpler to keep unconditional)
clap = { version = "4", features = ["derive", "env"] }

# Misc
rand = "0.10"

[dev-dependencies]
tempfile = "3"
